# po-llm

./: .buildinfo  CHANGELOG.html  CHANGELOG.md  Dockerfile.sphinx  Makefile  README.md  commands.html  genindex.html  glossary.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: changelog.yaml
_modules/: index.html
_sources/: CHANGELOG.md.txt  commands.rst.txt  glossary.rst.txt
docs/source/: conf.py  glossary.rst  index.rst
src/example/: bugs.po  mapping.po
src/pkg/: glossary.csv  glossary.py
src/pollm/: cli-1.py  cli.py  glossary.csv  glossary.py  prompt_utils.py  test.py
src/pollm/prompts/: system_prompt.txt  translate.txt
